--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "stripe": "^15.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
